--- a/AnagramChecker.Tests/AnagramChecker.Tests.csproj
+++ b/AnagramChecker.Tests/AnagramChecker.Tests.csproj
@@ -10,6 +10,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToDoList\ToDoList.csproj" />
+    <ProjectReference Include="..\AnagramChecker\AnagramChecker.csproj" />
   </ItemGroup>
 </Project>
